Removed unused image resources. Updated graphics on team and event info pages.